genre as key and value as ID's of movies

--- a/Genre-specific.ipynb
+++ b/Genre-specific.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -75,24 +75,62 @@
        "4   5  Father of the Bride Part II (1995)                        Comedy"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = p.read_csv('Data/movies.dat', sep='::', engine='python')\n",
+    "# Preview data\n",
     "df[:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Action': [],\n",
+       " 'Adventure': [],\n",
+       " 'Animation': [],\n",
+       " \"Children's\": [],\n",
+       " 'Comedy': [],\n",
+       " 'Crime': [],\n",
+       " 'Documentary': [],\n",
+       " 'Drama': [],\n",
+       " 'Fantasy': [],\n",
+       " 'Film-Noir': [],\n",
+       " 'Horror': [],\n",
+       " 'Musical': [],\n",
+       " 'Mystery': [],\n",
+       " 'Romance': [],\n",
+       " 'Sci-Fi': [],\n",
+       " 'Thriller': [],\n",
+       " 'War': [],\n",
+       " 'Western': []}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "genre = {}\n",
+    "for index, row in df.iterrows():\n",
+    "    g = row['GENRE'].split('|')\n",
+    "    for gen in g:\n",
+    "        if gen not in genre:\n",
+    "            genre[gen] = [row['ID']]\n",
+    "        \n",
+    "genre"
+   ]
   },
   {
    "cell_type": "code",
