Calculated ratings for all the genre using the training data

--- a/Genre-specific.ipynb
+++ b/Genre-specific.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -75,7 +75,7 @@
        "4   5  Father of the Bride Part II (1995)                        Comedy"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,48 +88,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "genre = {}\n",
+    "movie = {} # key : ID ,value : Genre\n",
+    "for index, row in df.iterrows():\n",
+    "    g = row['GENRE'].split('|')\n",
+    "    movie[row['ID']] = g\n",
+    "    for gen in g:\n",
+    "        if gen not in genre:\n",
+    "            genre[gen] = [row['ID']]\n",
+    "        else:\n",
+    "            genre[gen] += [row['ID']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'Action': [],\n",
-       " 'Adventure': [],\n",
-       " 'Animation': [],\n",
-       " \"Children's\": [],\n",
-       " 'Comedy': [],\n",
-       " 'Crime': [],\n",
-       " 'Documentary': [],\n",
-       " 'Drama': [],\n",
-       " 'Fantasy': [],\n",
-       " 'Film-Noir': [],\n",
-       " 'Horror': [],\n",
-       " 'Musical': [],\n",
-       " 'Mystery': [],\n",
-       " 'Romance': [],\n",
-       " 'Sci-Fi': [],\n",
-       " 'Thriller': [],\n",
-       " 'War': [],\n",
-       " 'Western': []}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'Romance'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-24-c8f6c2ef5c0a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      9\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m             \u001b[0mgenre\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mgen\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'rating'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mgen_rating\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Romance'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m: 'Romance'"
+     ]
     }
    ],
    "source": [
-    "genre = {}\n",
+    "df = p.read_csv('Data/training_ratings_for_kaggle_comp.csv')\n",
+    "# rating for all the genre of the movie\n",
+    "gen_rating = {} \n",
     "for index, row in df.iterrows():\n",
-    "    g = row['GENRE'].split('|')\n",
-    "    for gen in g:\n",
+    "    MId = row['movie']\n",
+    "    for gen in movie[MId]:\n",
     "        if gen not in genre:\n",
-    "            genre[gen] = [row['ID']]\n",
-    "        \n",
-    "genre"
+    "            genre[gen] = [row['rating']]\n",
+    "        else:\n",
+    "            genre[gen] += [row['rating']]\n",
+    "for x in gen_rating"
    ]
   },
   {
