Weighted mean of individual genre rating

--- a/Genre-specific.ipynb
+++ b/Genre-specific.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -75,7 +75,7 @@
        "4   5  Father of the Bride Part II (1995)                        Comedy"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -108,23 +108,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'Romance'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-24-c8f6c2ef5c0a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      9\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m             \u001b[0mgenre\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mgen\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'rating'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mgen_rating\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Romance'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m: 'Romance'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = p.read_csv('Data/training_ratings_for_kaggle_comp.csv')\n",
     "# rating for all the genre of the movie\n",
@@ -132,11 +120,114 @@
     "for index, row in df.iterrows():\n",
     "    MId = row['movie']\n",
     "    for gen in movie[MId]:\n",
-    "        if gen not in genre:\n",
-    "            genre[gen] = [row['rating']]\n",
+    "        if gen not in gen_rating:\n",
+    "            gen_rating[gen] = [row['rating']]\n",
     "        else:\n",
-    "            genre[gen] += [row['rating']]\n",
-    "for x in gen_rating"
+    "            gen_rating[gen] += [row['rating']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1_1193</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1_661</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1_914</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1_3408</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1_2355</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user  rating      id\n",
+       "0     1     3.5  1_1193\n",
+       "1     1     3.5   1_661\n",
+       "2     1     3.5   1_914\n",
+       "3     1     3.5  1_3408\n",
+       "4     1     3.5  1_2355"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Testing\n",
+    "df = p.read_csv('Data/sample_submission.csv')\n",
+    "df[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "values = [['user','rating','id']]\n",
+    "for x in movie:\n",
+    "    for y in movie[x]:\n",
+    "        type(y)\n",
+    "for index, row in df.iterrows():\n",
+    "    x = row['id']\n",
+    "    MId = int(x[x.find('_') + 1:])\n",
+    "    num, den = 0.0, 1.0\n",
+    "    for gen in movie[MId]:\n",
+    "        if gen in gen_rating:\n",
+    "            num += sum(gen_rating[gen])\n",
+    "            den += len(gen_rating[gen])\n",
+    "    if den > 1.0:\n",
+    "        den = den - 1 \n",
+    "        rating = num/den\n",
+    "    else :\n",
+    "        rating = 3.5\n",
+    "    df.set_value(index, 'rating', rating)\n",
+    "df[:5]"
    ]
   },
   {
