--- a/Genre-specific.ipynb
+++ b/Genre-specific.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -75,7 +75,7 @@
        "4   5  Father of the Bride Part II (1995)                        Comedy"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -190,7 +190,7 @@
        "4     1     3.5  1_2355"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,11 +203,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3.778879</td>\n",
+       "      <td>1_1193</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3.578039</td>\n",
+       "      <td>1_661</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3.638652</td>\n",
+       "      <td>1_914</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3.778879</td>\n",
+       "      <td>1_3408</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3.540685</td>\n",
+       "      <td>1_2355</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user    rating      id\n",
+       "0     1  3.778879  1_1193\n",
+       "1     1  3.578039   1_661\n",
+       "2     1  3.638652   1_914\n",
+       "3     1  3.778879  1_3408\n",
+       "4     1  3.540685  1_2355"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "values = [['user','rating','id']]\n",
     "for x in movie:\n",
@@ -228,6 +290,17 @@
     "        rating = 3.5\n",
     "    df.set_value(index, 'rating', rating)\n",
     "df[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df.to_csv('Data/Genresults.csv', index=False)"
    ]
   },
   {
