--- a/Genre-specific.ipynb
+++ b/Genre-specific.ipynb
@@ -301,6 +301,101 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3.778879</td>\n",
+       "      <td>1_1193</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3.611220</td>\n",
+       "      <td>1_661</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3.653893</td>\n",
+       "      <td>1_914</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3.778879</td>\n",
+       "      <td>1_3408</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3.564576</td>\n",
+       "      <td>1_2355</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user    rating      id\n",
+       "0     1  3.778879  1_1193\n",
+       "1     1  3.611220   1_661\n",
+       "2     1  3.653893   1_914\n",
+       "3     1  3.778879  1_3408\n",
+       "4     1  3.564576  1_2355"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for index, row in df.iterrows():\n",
+    "    x = row['id']\n",
+    "    MId = int(x[x.find('_') + 1:])\n",
+    "    num = 0.0\n",
+    "#     den = 1.0\n",
+    "    for gen in movie[MId]:\n",
+    "        if gen in gen_rating:\n",
+    "            num += sum(gen_rating[gen])/len(gen_rating[gen])\n",
+    "#             den += len(gen_rating[gen])\n",
+    "    rating = num/len(movie[MId])\n",
+    "    df.set_value(index, 'rating', rating)\n",
+    "df[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df.to_csv('Data/Genresults2.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
